# grace

./: .gitignore  README.md  claude.md  conftest.py  pyproject.toml  tokenizer.json
grace/: __init__.py  config.py  data.py  model_baseline.py  model_grace.py  modules.py  tokenizer.py  train.py  utils.py
scripts/: generate.py  prepare_data.py
tests/: test_baseline.py  test_ckpt_path.py  test_data.py  test_generate.py  test_gpu.py  test_grace.py  test_kv_cache.py  test_modules.py  test_optim.py  test_params.py  test_tokenizer.py  test_train_smoke.py
